# PGP-Tools

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yml
apps/pgp/: .gitignore  .prettierignore  SECURITY.md  eslint.config.ts  package.json  wxt.config.ts
apps/pgp/components/keys/: ContactCard.tsx  ContactDropZone.tsx  GenerateKeyDialog.tsx  ImportKeyDialog.tsx  KeyCard.tsx  KeysView.tsx  ProtectionMethodPicker.tsx
apps/pgp/components/shared/: AppFooter.tsx  Dialog.tsx  MasterUnlockScreen.tsx  OnboardingFlow.tsx  SettingsView.tsx  StorageLocationPicker.tsx
apps/pgp/components/workspace/: DropZone.tsx  KeySelector.tsx  OutputArea.tsx  WorkspaceInput.tsx  WorkspaceResults.tsx  WorkspaceView.tsx  useWorkspaceState.ts
apps/pgp/entrypoints/: background.ts
apps/pgp/entrypoints/sidepanel/: App.tsx  index.html  main.tsx  style.css
apps/pgp/entrypoints/welcome/: Welcome.tsx  index.html  main.tsx
apps/pgp/gpg-wasm/: Cargo.toml
apps/pgp/gpg-wasm/src/: lib.rs  tests.rs
apps/pgp/hooks/: useContacts.ts  useKeySession.ts  useKeyring.ts  usePendingOperation.ts
apps/pgp/lib/: constants.ts  encoding.ts  lock-logger.ts  messages.ts  network-lockdown.ts  workspace-draft.ts
apps/pgp/lib/pgp/: key-management.ts  operations.ts  types.ts  wasm-loader.ts  (+3 more)
apps/pgp/scripts/: audit-network.mjs
tooling/eslint/: base.ts  package.json  react.ts  tsconfig.json
tooling/prettier/: index.js  package.json
tooling/tailwind/: eslint.config.ts  package.json  theme.css
tooling/typescript/: package.json
(+16 files in other folders)
