[package]
name = "gpg-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sequoia-openpgp = { version = "2", default-features = false, features = [
    "crypto-rust",
    "allow-experimental-crypto",
    # Required for WASM: RustCrypto backend can't guarantee constant-time on wasm32.
    # The browser's same-origin policy + extension sandboxing mitigate timing attacks.
    "allow-variable-time-crypto",
    "compression-deflate",
] }
wasm-bindgen = "=0.2.100"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Both versions needed: sequoia's deps use both getrandom v0.2 and v0.3
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
anyhow = "1"
argon2 = "0.5"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
